# bcpandas

./: .devcontainer.json  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  Dockerfile  LICENSE  README.md  Releasing.md  TODO.MD  creds.sample.json  dist.json  dist.ps1  dist.py  docker-compose.yml  env.yml  meta.template.yaml  meta.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  docker-test.yml  publish.yml  pythonpackage.yml  pythonpublish.yml
bcpandas/: __init__.py  __version__.py  constants.py  main.py  trigger_ci.py  utils.py
bcpandas/tests/: conftest.py  test_read_sql.py  test_sqlcreds.py  test_to_sql.py  test_utils.py  utils.py
benchmarks/: benchmark.py  benchmark_data.json  benchmark_environment.json  readsql_benchmark_data.json  readsql_benchmark_environment.json  tosql_benchmark_data.json
benchmarks/read_sql/: conftest.py  read_sql.py  test_read_sql.py
pandasql/: __init__.py  constants.py  main.py  utils.py
tests/: conftest.py  pytest.ini  test_basic.py  test_misc.py  test_performance.py  test_read_sql.py  test_sqlcreds.py  test_to_sql.py  test_utils.py  utils.py
