[project]
authors = [
  { name = "Josh Dimarsky", email = "24758845+yehoshuadimarsky@users.noreply.github.com" }
]
classifiers = [
  "Topic :: Database",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: SQL",
]
description = "High-level wrapper around BCP for high performance data transfers between pandas and SQL Server. No knowledge of BCP required!!"
keywords = ["bcp", "mssql", "pandas"]
license = {file = "LICENSE"}
maintainers = [
  { name = "Oliver Borchert", email = "me@borchero.com"}
]
name = "bcpandas"
readme = "README.md"
urls = { repository = "https://github.com/yehoshuadimarsky/bcpandas" }
dynamic = ["version"]
dependencies = [
  # per https://github.com/apache/airflow/pull/40272 and https://github.com/numpy/numpy/issues/26710
  "pandas >=2.2; python_version >=\"3.12\"",
  "pandas >=2.1.2, <2.2; python_version >=\"3.9\" and python_version <=\"3.11\"",
  "pandas >=1.5.3, <2.2; python_version <\"3.9\"",
  "pyodbc >=5",
  "sqlalchemy >=1.4",
]
requires-python = ">=3.8.1,<=3.11"

[tool.setuptools.dynamic]
version = {attr = "bcpandas.__version__"}

[dependency-groups]
dev = [
  "pre-commit >=3",
  "mypy >=1",
  "ruff >=0.6",
  "types-setuptools",
]
test = [
  "codetiming >=1",
  "docker >=6",
  "hypothesis >=6",
  "ipython >=8.10.0",
  "matplotlib >=3.7",
  "pytest >=7",
  "pytest-cov >=4",
  "requests >=2",
]

[tool.uv]
default-groups = ["dev", "test"]

[project.entry-points."pandas.sql.engine"]
bcpandas = "bcpandas.main:to_sql"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["build"]
line-length = 99

target-version = "py38"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "E",
  "F",
  "W",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
ignore_missing_imports = true
pretty = true
python_version = "3.8"
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--showlocals --tb=short --strict-markers -v --cov=bcpandas --cov-report html --hypothesis-show-statistics"

[tool.coverage.run]
omit = ["bcpandas/tests/*", "benchmarks/**"]
