[project]
authors = [
  { name = "Josh Dimarsky", email = "24758845+yehoshuadimarsky@users.noreply.github.com" }
]
classifiers = [
  "Topic :: Database",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: SQL",
]
description = "High-level wrapper around BCP for high performance data transfers between pandas and SQL Server. No knowledge of BCP required!!"
keywords = ["bcp", "mssql", "pandas"]
license = {file = "LICENSE"}
maintainers = [
  { name = "Oliver Borchert", email = "me@borchero.com"}
]
name = "bcpandas"
readme = "README.md"
urls = { repository = "https://github.com/yehoshuadimarsky/bcpandas" }
dynamic = ["version"]
dependencies = [
  "pandas[sql-other] >=1.5, <3",
  "pyodbc >=5; python_version <='3.12'",
  "pyodbc >=5.2; python_version >='3.13'",
  "sqlalchemy >=1.4",
]
requires-python = ">=3.9,<=3.13"

[tool.setuptools.dynamic]
version = {attr = "bcpandas.__version__"}

[dependency-groups]
dev = [
  "pre-commit >=3",
  "mypy >=1",
  "ruff >=0.6",
  "types-setuptools",
]
test = [
  "codetiming >=1",
  "docker >=6",
  "hypothesis >=6.110",
  "ipython >=8.10.0",
  "matplotlib >=3.9.2",
  "pytest >=7",
  "pytest-cov >=4",
  "requests >=2",
]

[tool.uv]
default-groups = ["dev", "test"]

[project.entry-points."pandas.sql.engine"]
bcpandas = "bcpandas.main:to_sql"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["build"]
line-length = 99

target-version = "py38"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "E",
  "F",
  "W",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
ignore_missing_imports = true
pretty = true
python_version = "3.8"
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--showlocals --tb=short --strict-markers -v --cov=bcpandas --cov-report html --hypothesis-show-statistics"

[tool.coverage.run]
omit = ["bcpandas/tests/*", "benchmarks/**"]
